# python-utils-edict

./: .gitignore  README.md  package.base.dockerfile  pyproject.toml
.github/workflows/: test.yml
src/surquest/utils/edicto/: __init__.py  attribute.py  dataset.py
src/surquest/utils/qdict/: attribute.py  dataset.py  helpers.py
test/: pytest.ini
test/edicto/: test_attribute.py  test_dataset.py
test/qdict/: test_attribute.py  test_dataset.py
