[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surquest-utils-edicto"
version = "0.0.1"
description = "Python package simplifies the manipulation with the lists of multi-dimensional dictionaries as you would use SQL or pyspark dataframes."
authors = [
    {name= "Michal Švarc", email= "michal.svarc@surquest.com"}
]
readme = "README.md"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]
[project.urls]
"Homepage" = "https://github.com/surquest/python-utils-edict"
"Bug Tracker" = "https://github.com/surquest/python-utils-edict/issues"

[tool.hatch.build.targets.wheel]
packages = ["surquest"]

[tool.hatch.build.targets.sdist.sources]
"src" = ""
